[gd_scene load_steps=3 format=3 uid="uid://b0hgt1cptcxrr"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_vib11"]
[ext_resource type="PackedScene" uid="uid://dhhoupqgfrqs1" path="res://scenes/Player.tscn" id="2_i8tpj"]

[node name="game" type="Node2D"]
script = ExtResource("1_vib11")

[node name="Map" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("2_i8tpj")]

[node name="Camera" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Camera"]

[node name="Health" type="Label" parent="Camera/CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0
text = "Health: 0"

[node name="Died" type="Label" parent="Camera/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "You Died. Press space to restart."
horizontal_alignment = 1

[node name="Edges" type="Node2D" parent="."]
z_index = 1

[node name="Ghosts" type="Node2D" parent="."]

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Bullets" type="Node2D" parent="."]

[connection signal="die" from="Player" to="." method="_on_player_die"]
[connection signal="shoot" from="Player" to="." method="_on_player_shoot"]
[connection signal="sucking" from="Player" to="." method="_on_player_sucking"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
